# fluxo

./: .env.example  .gitignore  README.md  pyproject.toml
fluxo/examples/: apple_demand_forecasting.py
fluxo/fluxo_core/data/: synthetic_generator.py
fluxo/fluxo_core/plots/: time_series_demand.py
